<resources>
    <string name="app_name">T-Go</string>

    <!-- Generic Terms -->
    <string name="user">User</string>
    <string name="courier">Courier</string>
    <string name="mod">Moderator</string>
    <string name="admin">Admin</string>

    <string name="Cancel">Cancel</string>
    <string name="Submit">Submit</string>
    <string name="loading">Loading...</string>

    <!-- LoginActivity -->
    <string name="username">Username: </string>
    <string name="password">Password: </string>
    <string name="signUp">Sign Up</string>
    <string name="login">Login</string>
    <string name="upgrade">Upgrade Account</string>
    <string name="applyingFor">Applying For: </string>


    <!-- ProfileActivity -->
    <string name="usernameExample">username</string>
    <string name="avgRating">Average Rating:</string>
    <string name="email">Email</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="paymentMethods">Payment Methods</string>
    <string name="update">Update</string>
    <string name="upgradeAcct">Upgrade Account</string>
    <string name="updateUserInfo">Update User Info</string>
    <string name="mapButton">Map Interface</string>
    <string name="newPassword">New Password</string>
    <string name="oldPassword">Old Password</string>

    <!-- Sign Up Activity -->
    <string name="confirmPassword">Confirm Password:</string>

    <!-- ChatActivity -->
    <string name="chatWith">Chat with:</string>
    <string name="send">Send</string>

    <!-- MapsActivity -->
    <string name="LocationLabelText">Go To:</string>

    <!-- JobDetailsActivity -->
    <string name="timePosted">Time Posted:</string>
    <string name="timeDue">Time Due:</string>

    <!-- ModSearchActiviity -->
    <string name="title_activity_mod_search_job">ModSearchJobActivity</string>
    <string name="userInput">User: </string>
    <string name="userHint">User\'s Username</string>
    <string name="courierInput">Courier: </string>
    <string name="courierHint">Courier\'s Username</string>
    <string name="search">Search</string>
    <string name="title_activity_adjust_prices">AdjustPricesActivity</string>
</resources>
