<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.may1722.t_go.ui.LoginActivity"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/AppNameLabel"
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="75sp"
            android:layout_marginTop="47dp"
            android:textAlignment="center"
            android:textStyle="normal|bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25sp" />

        <TextView
            android:id="@+id/UserNameLabel"
            android:text="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/UserNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:singleLine="true"
            android:selectAllOnFocus="false"
            android:background="@drawable/edittext_bottom_line"
            android:textSize="25sp"
            android:layout_marginBottom="30dp" />

        <TextView
            android:id="@+id/PasswordLabel"
            android:text="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/PasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:background="@drawable/edittext_bottom_line"
            android:textSize="25sp"
            android:layout_marginBottom="30dp" />
            <TextView
                android:id="@+id/ConfirmPasswordLabel"
                android:text="@string/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/ConfirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:background="@drawable/edittext_bottom_line"
                android:textSize="25sp"
                android:layout_marginBottom="30dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/Cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/CancelButton"
                android:layout_weight="1"
                android:textSize="25sp"
                android:textAllCaps="false"
                android:onClick="goToSignup (LoginActivity)"
                android:fontFamily="sans-serif-medium" />

            <Button
                android:text="@string/Submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/SubmitButton"
                android:layout_weight="1"
                android:textSize="25sp"
                android:textAllCaps="false"
                android:onClick="login" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
