<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.may1722.t_go.ui.JobDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bottom_line"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/jobRequestor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Requestor:"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/jobCourier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Courier:"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/jobStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Status"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/timePostedLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timePosted"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/timeDueLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timeDue"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/locationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2.66"
                android:paddingTop="5dp"
                android:text="Location"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/jobLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Delivery Location"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/instructionsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.54"
                android:text="Delivery Instructions"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/jobInstructionsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="none"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/paymentMethodsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.54"
                android:text="@string/paymentMethods"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/jobPaymentMethodsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paymentMethods"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>


            <ListView android:id="@android:id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawSelectorOnTop="false"/>

            <Button
                android:text="Chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chatButton"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:onClick="goToChat" />

            <Button
                android:id="@+id/goToMapButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToMaps"
                android:text="@string/mapButton" />

            <Button
                android:id="@+id/acceptJobButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="acceptJob"
                android:text="Accept Job"
                android:visibility="gone"/>

            <Button
                android:id="@+id/completeJobButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="completeJob"
                android:text="Complete Job"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>